--- a/app/components/newsletter/setup_newsletter.html
+++ b/app/components/newsletter/setup_newsletter.html
@@ -2,7 +2,7 @@
     <div class="color-line"></div>
     <div class="modal-header">
         <h4 class="modal-title">Email Newsletter Setup</h4>
-        <p class="font-bold">You may send newsletters to people within Networks that you are a leader of. This information is similar to what you would use to setup an email client on your mobile phone.</p>
+        <p class="font-bold">You may send newsletters to people within Resources that you are a leader of. This information is similar to what you would use to setup an email client on your mobile phone.</p>
     </div>
     <form name="news.form" ng-submit="news.setup()">
         <div class="modal-body">
