--- a/app/less/various.less
+++ b/app/less/various.less
@@ -1,5 +1,11 @@
 /* Custom */
 
+.list-hr {
+  border-bottom:1px solid #eee;
+  padding-bottom: 18px;
+  //margin-bottom: 12px;
+}
+
 // for company profile page
 
 .nav-tabs > li {
@@ -435,15 +441,9 @@ body #inbox_header_text, body #inbox_mark_read, body #inbox_footer, body #inbox_
 
 .user-row {
   padding-left: 40px;
-  min-height: 32px;
+  min-height: 40px;
   line-height: 1.3;
   font-size: 13px;
-}
-
-.user-row-border {
-  border-right: 1px solid #eee;
-  margin-right: -15px;
-  padding-right: 15px;
 }
 
 .user-img {
@@ -501,6 +501,7 @@ input:-moz-placeholder {
 
 .dash-table {
   vertical-align: top;
+  margin-top: 12px;
 }
 
 .w200 {
