--- a/app/components/settings.html
+++ b/app/components/settings.html
@@ -6,7 +6,7 @@
                     <i class="pe-7s-config fa-4x"></i>
                 </div>
                 <h2>Settings</h2>
-                <small>Make changes to the networks, industries, and locations that you are a leader of.</small>
+                <small>Make changes to the resources, industries, and locations that you are a leader of.</small>
             </div>
         </div>
     </div>
@@ -15,13 +15,13 @@
         <div class="hpanel hblue col-xs-12 col-sm-6 col-md-4" >
             <div class="panel-body">
                 <div class="stats-title">
-                    <h3>Networks</h3>
+                    <h3>Resources</h3>
                 </div>
                 <hr>
-                <div ng-repeat="(k, v) in nav.user.roles.leader">
-                    <div ng-if="nav.communities[k].resource" style="padding-bottom:10px; font-size: 18px;">{{ nav.communities[k].profile.name }}
-                        <button ng-click="nav.embedSettings(nav.communities[k])" class="btn btn-xs pull-right">Embed</button>
-                        <button ng-click="nav.editCommunity(nav.communities[k])" class="btn btn-primary btn-xs pull-right" style="margin-right: 5px;">Edit</button>
+                <div ng-repeat="k in settings.resources">
+                    <div style="padding-bottom:10px; font-size: 18px;">{{ k.profile.name }}
+                        <button ng-click="nav.embedSettings(k)" class="btn btn-xs pull-right">Embed</button>
+                        <button ng-click="nav.editCommunity(k)" class="btn btn-primary btn-xs pull-right" style="margin-right: 5px;">Edit</button>
                     </div>
                 </div>
                 <ul class="nav nav-second-level" style="margin-left: -15px;">
@@ -35,7 +35,7 @@
 
             <a ng-if="nav.user.communities.indexOf(nav.user.profile.home) > -1 && nav.user.newsletter" class="btn btn-info pull-right" ui-sref="newsletter" style="margin-top:15px; width: 100%;">Create / Edit Email Newsletters</a>
 
-            <button ng-if="nav.user.communities.indexOf(nav.user.profile.home) > -1 && nav.user.newsletter" ladda="nav.syncworking" class="ladda-button btn btn-warning pull-right" data-style="zoom-in" data-spinner-size="25" ng-click="nav.syncNewsletter()" style="margin-top:15px; width: 100%;" title="This will synchronize the members of your networks with your newsletter lists. This is only needed if names are missing from your lists.">Update Newsletter Lists from Networks</button>
+            <button ng-if="nav.user.communities.indexOf(nav.user.profile.home) > -1 && nav.user.newsletter" ladda="nav.syncworking" class="ladda-button btn btn-warning pull-right" data-style="zoom-in" data-spinner-size="25" ng-click="nav.syncNewsletter()" style="margin-top:15px; width: 100%;" title="This will synchronize your resource networks with your newsletter lists. This is only needed if names are missing from your lists.">Update Newsletter Lists from Resources</button>
 
         </div>
 
