--- a/app/components/users/user.dashboard.companies.html
+++ b/app/components/users/user.dashboard.companies.html
@@ -2,7 +2,7 @@
     <div ng-repeat="(type, val) in profile.team_panels" ng-switch on="$index % 2">
     <div class="col-xs-12 col-sm-6 col-md-4">
         <div class="hpanel" ng-class="val.color">
-            <div class="panel-body" style="padding: 10px 5px;">
+            <div class="panel-body" style="padding: 10px 5px; margin-bottom: -12px;">
                 <div class="col-xs-8">
                     <div class="stats-title pull-left" style="white-space: nowrap;">
                         <div class="stats-icon pull-left" style="margin-top: 11px; margin-right: 8px;">
