--- a/app/components/nav/nav.embed_settings.html
+++ b/app/components/nav/nav.embed_settings.html
@@ -80,6 +80,7 @@
                     <label>Use this code to embed this community:</label>
                     <pre>[iframe src="https://startupcommunity.org/{{ settings.community.key == settings.location.key ? settings.community.key : settings.location.key + '/' + settings.community.key }}" width="100%" height="1250"]</pre>
                     <em>This code is an example using the <a target="_blank" href="https://wordpress.org/plugins/iframe/">Wordpress Iframe plugin</a>. We recommend a minimum width of around 650px and minimum height of 1250px for the iframe.</em>
+                    <em>Add /people or /companies to the url for specific views.</em>
                 </div>
             </div>
 
