--- a/app/components/users/user.list.item.html
+++ b/app/components/users/user.list.item.html
@@ -8,18 +8,19 @@
         <a ng-click="nav.removeUser(item)" title="Remove {{item.value.profile.name}} from {{nav.community.profile.name}}" style="font-size: 11px; color:#bbb;">remove</a>
     </div>
     <div class="user-row list-hr">
-        <a ui-sref="user.dashboard({profile: item.value, location_path: item.path.key, location: nav.community, community: item.value, top: nav.top, communities: nav.communities, user: nav.user })" title="View {{::item.value.profile.name | words:0}}'s Profile" style="float: left; "><strong>{{::item.value.profile.name}} </strong></a>
-        <a ng-show="item.value.profile.summary.length > 0" title="Show Summary" ng-click="showSummary = !showSummary" class="user-summary" style="margin-top:-2px;">&nbsp;<i class="fa fa-chevron-down fa-fw"></i></a>
+        <span loading-bars ng-if="item[item.value.profile.name]"></span>
+        <a ui-sref="user.dashboard({profile: item.value, location_path: item.path.key, location: nav.community, community: item.value, top: nav.top, communities: nav.communities, user: nav.user })" title="View {{::item.value.profile.name | words:0}}'s Profile" ng-click="item[item.value.profile.name] = true" style="float: left; "><strong>{{::item.value.profile.name}} </strong></a>
+        <a ng-if="item.value.profile.summary.length > 0" title="Show Summary" ng-click="showSummary = !showSummary" class="user-summary" style="margin-top:-2px;">&nbsp;<i class="fa fa-chevron-down fa-fw"></i></a>
         <li ng-repeat="(item, val) in item.value.roles" class="user-role role-right" ><i ng-attr-title="{{item[0].toUpperCase() + item.slice(1);}}" style="font-weight: bold;" ng-class="{'text-primary pe-7s-paper-plane' : item == 'founder', 'text-danger pe-7s-flag' : item == 'leader', 'text-info pe-7s-study' : item == 'mentor', 'text-success pe-7s-gleam' : item == 'investor', 'text-default pe-7s-ball' : item == 'team', 'text-warning pe-7s-portfolio' : item == 'provider'}"></i></li>
         <br>
         <div class="dash-row">
             <span class="text-muted" ng-bind-html="::item.value.profile.headline | highlight:users.lastQuery" title="{{::item.value.profile.headline}}"></span>
         </div>
-        <div ng-show="(showSummary || $state.includes('search.*')) && item.value.profile.summary">
+        <div ng-if="(showSummary || $state.includes('search.*')) && item.value.profile.summary">
             <div style="padding-bottom: 10px;">
                 <hr>
                 <span class="text-muted" style="white-space:pre-wrap;" ng-bind-html="::item.value.profile.summary | linky:'_blank' | highlight:users.lastQuery | safe_html"></span>
-                <div id="skills" ng-show="(showSummary || users.lastQuery) && item.value.profile.summary" class="skills-top">
+                <div id="skills" ng-if="(showSummary || users.lastQuery) && item.value.profile.summary" class="skills-top">
                     <li ng-repeat="skill in item.value.profile.skills" class="label btn-default skills">
                         <a><span ui-sref="search.dashboard({location_path: nav.location.key, community: nav.location, query: skill, user: nav.user, communities: nav.communities, top: nav.top})" ng-bind-html="::skill | highlight:users.lastQuery"></span></a>
                     </li>
