--- a/app/components/companies/company.list.item.html
+++ b/app/components/companies/company.list.item.html
@@ -1,6 +1,6 @@
 <div class="col-md-12 dash-table">
     <div>
-        <a ui-sref="company.dashboard({profile: item.value, location_path: item.path.key, location: nav.community, community: item.value, top: nav.top, communities: nav.communities, user: nav.user })" title="View {{::item.value.profile.name | words:0}}'s Profile"><img
+        <a ui-sref="company.dashboard({profile: item.value, location_path: item.path.key, location: nav.community, community: item.value, top: nav.top, communities: nav.communities, user: nav.user })" ng-click="item[item.value.profile.name] = true" title="View {{::item.value.profile.name | words:0}}'s Profile"><img
                 ng-src="{{item.value.profile.avatar || '/public/images/browser_icon.jpg'}}" alt="{{::item.value.profile.name}}" class="user-img widget-image pull-left" onerror="this.src='images/browser_icon.jpg'"/></a>
     </div>
     <div class="user-row list-hr">
