--- a/app/components/resources/resource.add.html
+++ b/app/components/resources/resource.add.html
@@ -3,7 +3,7 @@
     <div class="panel-body">
 
         <div ng-if="!add.update">
-            <div class="col-sm-6">
+            <div class="col-xs-12">
                 <h4 class="modal-title">Add a {{ add.is_resource ? 'resource' : 'company' }} to {{add.location.profile.name.split(',').slice(0, (add.location.profile.name.split(',').length - 1) || 1).join()}}</h4>
                 <p class="font-bold">{{ add.is_resource ?
                     'Resources include coworking spaces, accelerators, investment funds, networking events, and other organizations that support entrepreneurship.' :
@@ -11,17 +11,10 @@
             </div>
         </div>
         <div ng-if="add.update">
-            <div class="col-sm-6">
+            <div class="col-xs-12">
                 <h4 class="modal-title">Edit {{ ::add.selectedCompany.name }}</h4>
+                <p class="font-bold">Edit this record to add your role or improve the accuracy of the information.</p>
             </div>
-        </div>
-        <div class="col-lg-6" style="margin-top:2px;">
-            <select class="form-control input-md btn-info pull-right" style="width: 150px; margin-left: 12px; margin-top: 2px;" ng-model="add.selectedRole" ng-options="r.value as r.text for r in add.selectRoles"></select>
-            <h4 class="w400 pull-right">
-
-                Your role is:
-
-            </h4>
         </div>
 
     </div>
@@ -51,13 +44,21 @@
                     </div>
                     <div class="col-lg-9">
                         <div ng-show="add.step == 1">
-                            <div class="form-group col-lg-12">
+                            <div class="form-group col-lg-6">
                                 <h4 class="w400">
 
                                     Name of the {{ add.is_resource ? 'resource' : 'company' }}:
 
                                 </h4>
                                 <input type="text" placeholder="Type the {{ add.is_resource ? 'resource' : 'company' }} name.." ng-model="add.selectedCompany.name" ng-model-options="{ debounce: 250, blur: 0 }" class="form-control input-lg">
+                            </div>
+                            <div class="form-group col-lg-6" style="margin-top:2px;">
+                                <h4 class="w400">
+
+                                    Your role is:
+
+                                </h4>
+                                <select class="form-control input-lg industry-select" ng-model="add.selectedRole" ng-options="r.value as r.text for r in add.selectRoles"></select>
                             </div>
                             <div class="form-group col-lg-6">
                                 <h4 class="w400">
@@ -195,6 +196,7 @@
                 <button ng-click="add.step = 1" ng-disabled="add.step == 1" class="btn btn-default">Previous</button>
                 <button ng-click="add.checkUrl()" ng-disabled="!add.selectedCompany.name || !add.selectedCompany.parent" ng-hide="add.step == 2" class="btn btn-success">Next</button>
                 <button ladda="add.working" class="ladda-button finish btn-success btn" data-style="zoom-in" data-spinner-size="25" ng-show="add.step == 2" ng-click="add.addCompany($event)" type="submit">{{ (add.update ? 'Update ' : 'Add ') + (add.selectedCompany.name || (add.is_resource ? 'Resource' : 'Company')) }}</button>
+                <div ng-if="!add.update && !add.is_resource" class="pull-left" style="margin-top:10px;"><i><a ui-sref="resource.add">Click here if this company is a resource (coworking space, accelerator, event, etc)</a></i></div>
             </div>
 
         </form>
