falt on dashboard line201

--- a/app/components/dashboard/dashboard.html
+++ b/app/components/dashboard/dashboard.html
@@ -198,7 +198,7 @@
                     <div class="panel-body" ng-repeat="item in dashboard.top.parents | limitTo: 5">
                         <div class="row">
                             <div class="col-xs-10 forum-heading">
-                                <a ui-sref="community.dashboard({community_path: item.label, community: nav.communities[item.label], query: '*', location_path: nav.location.key})"><h4 style="font-weight: 200;">{{item.label[0].toUpperCase() + item.label.slice(1);}}</h4></a>
+                                <a ui-sref="community.dashboard.test({community_path: item.label, community: nav.communities[item.label], query: '*', location_path: nav.location.key})"><h4 style="font-weight: 200;">{{item.label[0].toUpperCase() + item.label.slice(1);}}</h4></a>
                                 <uib-progressbar value="item.value" max="dashboard.max" type="success" class="progress-small full" style="margin-top: 7px;"></uib-progressbar>
                             </div>
                             <div class="col-xs-2 forum-info">
