--- a/app/components/users/user.list.item.html
+++ b/app/components/users/user.list.item.html
@@ -1,13 +1,13 @@
 <div class="col-md-12 dash-table">
     <div>
-        <a ui-sref="user.dashboard({profile: item.value, location_path: item.path.key, location: nav.community, community: item.value, top: nav.top, communities: nav.communities, user: nav.user })" ng-click="item[item.value.profile.name] = true" title="View {{::item.value.profile.name | words:0}}'s Profile">
+        <a ui-sref="user.dashboard({profile: item.value, location_path: item.path.key, location: nav.community, community: item.value, top: nav.top, communities: nav.communities, user: nav.user })" ng-click="nav.loaders[item.value.profile.name] = true" title="View {{::item.value.profile.name | words:0}}'s Profile">
             <img ng-src="{{item.value.profile.avatar || '/public/images/blank_avatar.png'}}" alt="{{::item.value.profile.name}}" class="user-img widget-image img-circle pull-left" onerror="this.src='/public/images/blank_avatar.png'"/>
         </a>
     </div>
     <div class="user-row list-hr">
         <a ng-show="(nav.community.resource || nav.location.resource) && nav.user.roles.leader[nav.community.key]" ng-click="nav.removeUser(item)" title="Remove {{::item.value.profile.name}} from {{::nav.community.profile.name}}" style="font-size: 11px; color:#bbb; padding-left:4px;">remove</a>
-        <span loading-bars ng-if="item[item.value.profile.name]"></span>
-        <a ui-sref="user.dashboard({profile: item.value, location_path: item.path.key, location: nav.community, community: item.value, top: nav.top, communities: nav.communities, user: nav.user })" title="View {{::item.value.profile.name | words:0}}'s Profile" ng-click="item[item.value.profile.name] = true" style="float: left; "><strong>{{::item.value.profile.name}} </strong></a>
+        <span loading-bars ng-if="nav.loaders[item.value.profile.name]"></span>
+        <a ui-sref="user.dashboard({profile: item.value, location_path: item.path.key, location: nav.community, community: item.value, top: nav.top, communities: nav.communities, user: nav.user })" title="View {{::item.value.profile.name | words:0}}'s Profile" ng-click="nav.loaders[item.value.profile.name] = true" style="float: left; "><strong>{{::item.value.profile.name}} </strong></a>
         <a ng-show="item.value.profile.summary.length > 0" title="Show Summary" ng-click="showSummary = !showSummary" class="user-summary">&nbsp;<i class="fa fa-chevron-down fa-fw"></i></a>
         <li ng-repeat="(item, val) in item.value.roles" class="user-role role-right" ><i ng-attr-title="{{item[0].toUpperCase() + item.slice(1);}}" style="font-weight: bold;" ng-class="{'text-primary pe-7s-paper-plane' : item == 'founder', 'text-danger pe-7s-flag' : item == 'leader', 'text-info pe-7s-study' : item == 'mentor', 'text-success pe-7s-gleam' : item == 'investor', 'text-default pe-7s-ball' : item == 'team', 'text-warning pe-7s-portfolio' : item == 'provider'}"></i></li>
         <br>
