added jaco to frontend

--- a/app/components/users/user.dashboard.companies.panel.html
+++ b/app/components/users/user.dashboard.companies.panel.html
@@ -19,5 +19,5 @@
             <div ng-if="$last" style="margin-bottom:-11px;"></div>
         </div>
     </div>
-    <div ng-if="!profile.companies[type.name]" style="padding-top: 10px;">None yet..</div>
+    <div ng-if="!profile.companies[type.name]" style="padding-top: 10px;" tooltip="Go to the 'team' page of a company profile.">None yet..</div>
 </div>
