--- a/app/components/users/user.dashboard.profile.html
+++ b/app/components/users/user.dashboard.profile.html
@@ -3,7 +3,7 @@
         <div style="padding-bottom: 20px;">
             <div>
                 <div class="pull-right">
-                    <a href="{{::profile.user.profile.linkedin.publicProfileUrl}}" target="_blank"><i class="fa fa-linkedin btn btn-default btn-xs"></i>
+                    <a href="{{::profile.user.profile.avatar}}" target="_blank"><i class="fa fa-linkedin btn btn-default btn-xs"></i>
                     </a>
                 </div>
             </div>
@@ -11,7 +11,7 @@
                 words:1}} {{::profile.user.profile.name | words:2}}
             </h3>
             <h4>
-                {{::profile.user.profile.linkedin.headline}}
+                {{::profile.user.profile.headline}}
             </h4>
         </div>
 
