--- a/app/components/dashboard/dashboard.html
+++ b/app/components/dashboard/dashboard.html
@@ -155,11 +155,14 @@
                     <div class="panel-body" ng-repeat="item in dashboard.top.skills.entries">
                         <div class="row">
                             <div class="col-xs-10 forum-heading">
-                                <a ui-sref="search.dashboard({location_path: dashboard.location_path, community_path: dashboard.community_path, query: item.value})"><h4 style="font-weight: 200;">{{item.value}}</h4></a>
-                                <uib-progressbar ng-attr-value="(item.count/dashboard.top.skills.entries[0].count)*100" type="info" class="progress-small full" style="margin-top: 7px;"></uib-progressbar>
+                                <a ui-sref="search.dashboard({location_path: dashboard.location_path, community_path: dashboard.community_path, query: item.value})"><h4 style="font-weight: 200;">{{item.value}}</h4>
+                                    <uib-progressbar ng-attr-value="(item.count/dashboard.top.skills.entries[0].count)*100" type="info" class="progress-small full" style="margin-top: 7px;"></uib-progressbar>
+                                </a>
                             </div>
                             <div class="col-xs-2 forum-info">
-                                <span class="number number-column">{{item.count}}</span>
+                                <a ui-sref="search.dashboard({location_path: dashboard.location_path, community_path: dashboard.community_path, query: item.value})">
+                                    <span class="number number-column">{{item.count}}</span>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -177,11 +180,14 @@
                     <div class="panel-body" ng-repeat="item in dashboard.top.industries.entries">
                         <div class="row">
                             <div class="col-xs-10 forum-heading">
-                                <a ui-sref="search.dashboard({location_path: dashboard.location_path, community_path: dashboard.community_path, query: item.value})"><h4 style="font-weight: 200;">{{item.value}}</h4></a>
-                                <uib-progressbar ng-attr-value="(item.count/dashboard.top.industries.entries[0].count)*100" type="default" class="progress-small full" style="margin-top: 7px;"></uib-progressbar>
+                                <a ui-sref="search.dashboard({location_path: dashboard.location_path, community_path: dashboard.community_path, query: item.value})"><h4 style="font-weight: 200;">{{item.value}}</h4>
+                                    <uib-progressbar ng-attr-value="(item.count/dashboard.top.industries.entries[0].count)*100" type="default" class="progress-small full" style="margin-top: 7px;"></uib-progressbar>
+                                </a>
                             </div>
                             <div class="col-xs-2 forum-info">
-                                <span class="number number-column">{{item.count}}</span>
+                                <a ui-sref="search.dashboard({location_path: dashboard.location_path, community_path: dashboard.community_path, query: item.value})">
+                                    <span class="number number-column">{{item.count}}</span>
+                                <a/>
                             </div>
                         </div>
                     </div>
@@ -198,11 +204,14 @@
                     <div class="panel-body" ng-repeat="item in dashboard.top.parents | limitTo: 5">
                         <div class="row">
                             <div class="col-xs-10 forum-heading">
-                                <a ui-sref="community.dashboard({community_path: item.label, community: nav.communities[item.label], query: '*', location_path: nav.location.key})"><h4 style="font-weight: 200;">{{item.label[0].toUpperCase() + item.label.slice(1);}}</h4></a>
-                                <uib-progressbar value="item.value" max="dashboard.max" type="success" class="progress-small full" style="margin-top: 7px;"></uib-progressbar>
+                                <a ui-sref="community.dashboard({community_path: item.label, community: nav.communities[item.label], query: '*', location_path: nav.location.key})"><h4 style="font-weight: 200;">{{item.label[0].toUpperCase() + item.label.slice(1);}}</h4>
+                                    <uib-progressbar value="item.value" max="dashboard.max" type="success" class="progress-small full" style="margin-top: 7px;"></uib-progressbar>
+                                </a>
                             </div>
                             <div class="col-xs-2 forum-info">
-                                <span class="number number-column">{{((item.value / dashboard.max)*100).toFixed(0)}}%</span>
+                                <a ui-sref="community.dashboard({community_path: item.label, community: nav.communities[item.label], query: '*', location_path: nav.location.key})">
+                                    <span class="number number-column">{{((item.value / dashboard.max)*100).toFixed(0)}}%</span>
+                                </a>
                             </div>
                         </div>
                     </div>
